--- a/.github/workflows/poi-cicd.yml
+++ b/.github/workflows/poi-cicd.yml
@@ -2,12 +2,12 @@ name: POI CICD
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
     paths:
       - apis/poi/poi.sln/**
       - .github/workflows/poi-cicd.yml
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     paths:
       - apis/poi/poi.sln/**
       - .github/workflows/poi-cicd.yml
