--- a/.github/workflows/poi-cicd.yml
+++ b/.github/workflows/poi-cicd.yml
@@ -1,44 +1,54 @@
 name: POI CICD
 
+env:
+  poi_path: apis/poi/**
+  registry: openhackdg116md5acr.azurecr.io
+  repository: devopsoh/api-poi
+  docker_path: apis/poi/web
+  staging_url: https://openhackdg116md5poi-staging.azurewebsites.net
+  prod_url: https://openhackdg116md5poi.azurewebsites.net
+  resource_group: openhackdg116md5rg
+  webapp_name: openhackdg116md5poi
+  build_name: POI
+
 on:
   push:
-    branches: [ main ]
-    paths:
-      - apis/poi/poi.sln/**
+    branches: [ master ]
+    paths: 
+      - apis/poi/**  
       - .github/workflows/poi-cicd.yml
   pull_request:
-    branches: [ main ]
-    paths:
-      - apis/poi/poi.sln/**
+    branches: [ master ]
+    paths: 
+      - apis/poi/**
       - .github/workflows/poi-cicd.yml
 
 jobs:
   build_and_test:
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v2
-    
-    - name: Setup .NET
+
+    - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: 3.1.202
+        dotnet-version: '3.1.202'
 
     - name: Add Code Coverage Tools
       working-directory: apis/poi/tests/UnitTests
       run: dotnet add package coverlet.msbuild
-    
-    - name: Restore dependencies
+
+    - name: Install dependencies
       run: dotnet restore apis/poi/web/*.csproj
-    
-    - name: Build Web
+      
+    - name: .NET Build Web
       run: dotnet build --configuration Release --no-restore apis/poi/web/*.csproj
-    
-    - name: Build Unit Tests
+
+    - name: .NET Build Unit Tests
       run: dotnet build --configuration Release apis/poi/tests/UnitTests/UnitTests.csproj
-    
-    - name: Test
-      run: dotnet test --no-restore --verbosity normal apis/poi/tests/UnitTests /p:CollectCoverage=true /p:CoverletOutput=lcov/ /p:CoverletOutputFormat=lcov
+
+    - name: .NET Test
+      run: dotnet test --no-restore --verbosity normal apis/poi/tests/UnitTests  /p:CollectCoverage=true /p:CoverletOutput=lcov/ /p:CoverletOutputFormat=lcov
       
     - name: Coveralls
       uses: coverallsapp/github-action@master
@@ -47,3 +57,64 @@ jobs:
         path-to-lcov: apis/poi/tests/UnitTests/lcov/coverage.info
         base-path: apis/poi
         flag-name: Unit
+
+    - uses: actions/github-script@0.9.0
+      if: failure()
+      with:
+        github-token: ${{secrets.GITHUB_TOKEN}}
+        script: |
+          let body = "${{ env.build_name }} Worflow Failure \n Build Number: ${{ github.run_number }} \n Build Log: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }} \n SHA: [${{ github.sha }}](https://github.com/${{ github.repository }}/commit/${{ github.sha }}) \n";
+          github.issues.create({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            title: "${{ env.build_name }} Workflow ${{ github.run_number }} Failed! ",
+            body: body
+          });
+          
+  docker_build_and_push:
+    if: github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    needs: build_and_test
+    steps:     
+    - uses: actions/checkout@v2
+
+    - name: Docker login     
+      run: docker login $registry -u ${{ secrets.DOCKER_USER }} -p ${{ secrets.DOCKER_PW }}
+
+    - name: Docker build
+      run: docker build -t $registry/$repository:${{github.run_number}} --build-arg build_version=${{github.run_number}} $docker_path
+
+    - name: Docker Push
+      run: docker push $registry/$repository:${{github.run_number}}  
+     
+    - name: Azure WebApp
+      uses: Azure/webapps-deploy@v2
+      with:
+        # Name of the Azure Web App
+        app-name: $webapp_name
+        # Applies to Web Apps(Windows and Linux) and Web App Containers(linux). Multi container scenario not supported. Publish profile (*.publishsettings) file contents with Web Deploy secrets
+        publish-profile: ${{secrets.PUBLISH_PROFILE}}
+        # Enter an existing Slot other than the Production slot
+        #slot-name: # optional, default is production
+        # Applies to Web App only: Path to package or folder. *.zip, *.war, *.jar or a folder to deploy
+        #package: # optional, default is .
+        # Applies to Web App Containers only: Specify the fully qualified container image(s) name. For example, 'myregistry.azurecr.io/nginx:latest' or 'python:3.7.2-alpine/'. For multi-container scenario multiple container image names can be provided (multi-line separated)
+        images: '$registry/$repository:${{github.run_number}}'
+        # Applies to Web App Containers only: Path of the Docker-Compose file. Should be a fully qualified path or relative to the default working directory. Required for multi-container scenario
+        #configuration-file: # optional
+        # Enter the start up command. For ex. dotnet run or dotnet run
+        #startup-command: # this is very optional
+      
+    - uses: actions/github-script@0.9.0
+      if: failure()
+      with:
+        github-token: ${{secrets.GITHUB_TOKEN}}
+        script: |
+          let body = "${{ env.build_name }} Worflow Failure \n Build Number: ${{ github.run_number }} \n Build Log: https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }} \n SHA: [${{ github.sha }}](https://github.com/${{ github.repository }}/commit/${{ github.sha }}) \n";
+          github.issues.create({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            title: "${{ env.build_name }} Workflow ${{ github.run_number }} Failed! ",
+            body: body
+          });
+  
