--- a/.github/workflows/user-java-cicd.yml
+++ b/.github/workflows/user-java-cicd.yml
@@ -5,12 +5,12 @@ name: User Java CICD
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
     paths: 
       - apis/user-java/**  
       - .github/workflows/user-java-cicd.yml
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     paths: 
       - apis/user-java/**
       - .github/workflows/user-java-cicd.yml
