Changed trigger from master to main

--- a/.github/workflows/poi-cicd.yml
+++ b/.github/workflows/poi-cicd.yml
@@ -13,12 +13,12 @@ env:
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
     paths: 
       - apis/poi/**  
       - .github/workflows/poi-cicd.yml
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     paths: 
       - apis/poi/**
       - .github/workflows/poi-cicd.yml
