--- a/.github/workflows/poi-cicd.yml
+++ b/.github/workflows/poi-cicd.yml
@@ -72,7 +72,7 @@ jobs:
           });
           
   docker_build_and_push:
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build_and_test
     steps:     
