--- a/.github/workflows/poi-cicd.yml
+++ b/.github/workflows/poi-cicd.yml
@@ -91,7 +91,7 @@ jobs:
       uses: Azure/webapps-deploy@v2
       with:
         # Name of the Azure Web App
-        app-name: $webapp_name
+        app-name: 'openhackdg116md5poi'
         # Applies to Web Apps(Windows and Linux) and Web App Containers(linux). Multi container scenario not supported. Publish profile (*.publishsettings) file contents with Web Deploy secrets
         publish-profile: ${{secrets.PUBLISH_PROFILE}}
         # Enter an existing Slot other than the Production slot
