--- a/.github/workflows/poi-cicd.yml
+++ b/.github/workflows/poi-cicd.yml
@@ -100,7 +100,8 @@ jobs:
         #package: # optional, default is .
         # Applies to Web App Containers only: Specify the fully qualified container image(s) name. For example, 'myregistry.azurecr.io/nginx:latest' or 'python:3.7.2-alpine/'. For multi-container scenario multiple container image names can be provided (multi-line separated)
         #images: '$registry/$repository:${{github.run_number}}'
-        images: 'openhackdg116md5acr.azurecr.io/devopsoh/api-poi:7'
+        images: '${{ env.registry }}/$${{ env.repository }}:${{ github.run_number }}'
+        #images: 'openhackdg116md5acr.azurecr.io/devopsoh/api-poi:7'
         # Applies to Web App Containers only: Path of the Docker-Compose file. Should be a fully qualified path or relative to the default working directory. Required for multi-container scenario
         #configuration-file: # optional
         # Enter the start up command. For ex. dotnet run or dotnet run
